--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+header {
+    background-image: url('../img/Background.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+@media screen and (max-width: 1280px) {
+    header {
+        background-image: none;
+    }
+}
+    
